Clean up java code